# spice-sim

./: .gitignore  README.md  TODO.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.codex/: config.toml
docs/: relu-neuron-qa.md
mcp-server/: README.md  spice_mcp.py  verify_all.py
scripts/: build-ngspice-wasm.sh
src/: App.tsx  ErrorBoundary.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  control.rs  lib.rs
src-tauri/src/engine/: libngspice.rs  mod.rs
src-tauri/tests/: ngspice_smoke.rs
src/editor/: AnalysisDialog.tsx  (+72 more)
tests/: analysisValidation.test.ts  apiProbe.test.ts  autoLayout.test.ts  autoRunStatus.test.ts  canvasHitTest.test.ts  canvasInteraction.test.ts  canvasViewport.test.ts  dcSweepMetrics.test.ts  docNormalize.test.ts  draftMeasurement.test.ts  editorHistory.test.ts  editorStatus.test.ts  files.test.ts  geometry.test.ts  labelFormatting.test.ts  labelPlacement.test.ts  liveFlow.test.ts  mathText.test.ts  measurementFormatting.test.ts  measurementUnits.test.ts  miniScope.test.ts  model.test.ts  modelPresets.test.ts  netLabelConnections.test.ts  netlistImport.test.ts  netlistWarnings.test.ts  noteStyle.test.ts  panMath.test.ts  placement.test.ts  probeDisplay.test.ts  reluRegression.test.ts  schematicClipboard.test.ts  scopeLayout.test.ts  selectionTopology.test.ts  shareUrl.test.ts  simVectorLookup.test.ts  simulationErrors.test.ts  sourceKinds.test.ts  sourceValues.test.ts  subxLayout.test.ts  (+19 more)
(+15 files in other folders)
