[package]
name = "spice-sim"
version = "0.1.0"
description = "Desktop schematic editor and ngspice front end"
authors = ["Spice Sim contributors"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
libloading = "0.8"
parking_lot = "0.12"
once_cell = "1"
thiserror = "1"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tiny_http = "0.12"
